<resources>
    <string name="app_name">Money Manager</string>
    <string name="Close">Close</string>
    <string name="Open">Open</string>
    <string name="Category">Category</string>
    <string name="Amount">Amount</string>
    <string name="Income">Income</string>
    <string name="Expense">Expense</string>
    <string name="Home">Home</string>
    <string name="Bills">Bills</string>
    <string name="Health">Health</string>
    <string name="Food">Food</string>
    <string name="Gym">Gym</string>
    <string name="Education">Education</string>
    <string name="Grocery">Grocery</string>
    <string name="Personal">Personal</string>
    <string name="Transport">Transport</string>
    <string name="Other">Other</string>
    <string name="Salary">Salary</string>
    <string name="Pocket_Money">Pocket Money</string>
    <string name="Investment">Investment</string>
    <string name="Freelancing">Freelancing</string>
    <string name="Savings">Saving</string>
    <string name="Transaction">Transaction</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
